HRU-7806 Made changes for Firefox Outline issue on firefox

--- a/web-app/css/timeout.css
+++ b/web-app/css/timeout.css
@@ -7,6 +7,7 @@
     height: 90%;
     display: table;
 }
+::-moz-focus-inner {border:0;}
 .dialog-wrapper {
     display: table-cell;
     vertical-align: middle;
